# aoc2025

./: Cargo.toml
src/: day1.rs  day2.rs
